[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/theme_skillButton.tres" type="Theme" id=1]
[ext_resource path="res://font/font_uiState.tres" type="DynamicFont" id=2]
[ext_resource path="res://scene/Battle/misc/ItemView.gd" type="Script" id=3]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=4]

[node name="ItemView" type="Button"]
margin_right = 48.0
margin_bottom = 40.0
rect_min_size = Vector2( 112, 40 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "                            "
script = ExtResource( 3 )

[node name="mingziLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 59.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "闪电"
valign = 1

[node name="costLabel" type="Label" parent="."]
margin_left = 69.0
margin_top = 11.0
margin_right = 105.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "50"
align = 2

[node name="shade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.686275 )

[node name="cdLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 4
text = "1"
align = 1
valign = 1

